--- a/index.html
+++ b/index.html
@@ -7,7 +7,24 @@
 
     <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <a href="#text"></a>
+            <a href="#dataviz1"></a>
+            <a href="#dataviz2"></a>
+        </nav>
+    </header>
+    <main>
+        <div>
+            <div class="chapo"></div>
+            <img src="" alt="">
+        </div>
+        <canvas id="chart">
+        </canvas>
+    </main>
+    <footer></footer>
 </body>
+
 </html>
