--- a/index.html
+++ b/index.html
@@ -18,8 +18,22 @@
     </header>
     <main>
         <div>
-            <div class="chapo"></div>
+            <div class="chapo">
+                <h1></h1>
+                <p></p>
+            </div>
             <img src="" alt="">
+        </div>
+        <div class="" id="text">
+            <h2></h2>
+            <p></p>
+            <div>
+                <img src="" alt="">
+                <div>
+                    <h2></h2>
+                    <p></p>
+                </div>
+            </div>
         </div>
         <canvas id="chart">
         </canvas>
