--- a/index.html
+++ b/index.html
@@ -42,6 +42,18 @@
 </body>
 
 <script>
+        let data=[];
+
+        let ctx = document.getElementById('chart');
+    new Chart(ctx, { 
+    type: '', 
+    data: { 
+    datasets:[{ 
+        label:'data', 
+        data: data, 
+    }] 
+}, 
+});
 </script>
 
 </html>
