--- a/index.html
+++ b/index.html
@@ -25,21 +25,12 @@
     <main>
         <div>
             <div class="chapo">
-                <h1></h1>
-                <p></p>
+                <h1 class="title is-1">Le Titre</h1>
+                <p>Lorem Ipsum dolor sit amet, set consecitur dolor semet it. Su Domor sil amet.</p>
             </div>
             <img src="" alt="">
         </div>
         <div class="" id="text">
-            <h2></h2>
-            <p></p>
-            <div>
-                <img src="" alt="">
-                <div>
-                    <h2></h2>
-                    <p></p>
-                </div>
-            </div>
         </div>
         <canvas id="chart">
         </canvas>
