--- a/index.html
+++ b/index.html
@@ -16,10 +16,17 @@
 
 <body>
     <header>
-        <nav>
-            <a href="#text"></a>
-            <a href="#dataviz1"></a>
-            <a href="#dataviz2"></a>
+        <nav class="navbar">
+            <div class="navbar-brand">
+                <span class="icon">
+                    <i class=""></i>
+                </span>
+            </div>
+            <div class="navbar-end">
+                <a href="#text"></a>
+                <a href="#dataviz1"></a>
+                <a href="#dataviz2"></a>
+            </div>
         </nav>
     </header>
     <main>
@@ -35,7 +42,13 @@
         <canvas id="chart">
         </canvas>
     </main>
-    <footer></footer>
+    <footer class="footer">
+        <div class="content has-text-centered">
+            <p>
+                
+            </p>
+        </div>
+    </footer>
 </body>
 
 <script>
