--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 </div>
             </nav>
         </header>
-        <main>
-            <div class="columns is-8 m-6">
+        <main class="m-6">
+            <div class="columns is-8">
                 <div class="column">
                     <h1 class="title is-1">Le Titre Lorem Ipsum Dolor Sit
                         Amet</h1>
@@ -41,7 +41,7 @@
                     <img src="img/test.png" class="image" alt>
                 </div>
             </div>
-            <div class="columns m-6" id="text">
+            <div class="columns" id="text">
                 <div class="column">
                     <p class="is-size-5">"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
                 </div>
@@ -51,7 +51,7 @@
                     </p>
                 </div>
             </div>
-            <div class="columns m-6">
+            <div class="columns">
                 <div class="column">
                     <img src="img/test.png" class="image" alt="">
                 </div>
@@ -64,8 +64,15 @@
                     </p>
                 </div>
             </div>
+            <h2 class="title is-2" id="dataviz1">Dataviz 1</h2>
             <canvas id="chart">
             </canvas>
+            <p>Oe oe oe du texte du texte du texte</p>
+
+            <h2 class="title is-2" id="dataviz2">Dataviz 2</h2>
+            <canvas id="chart">
+            </canvas>
+            <p>Oe oe oe du texte du texte du texte</p>
         </main>
         <footer class="footer">
             <div class="content has-text-centered">
