reduit la taille du dataviz

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
             integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
-            <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     </head>
 
     <body>
@@ -71,15 +71,25 @@
                     </p>
                 </div>
             </div>
-            <h2 class="title is-2" id="dataviz1">Dataviz 1</h2>
-            <canvas id="chart">
-            </canvas>
-            <p>Oe oe oe du texte du texte du texte</p>
-
-            <h2 class="title is-2" id="dataviz2">Dataviz 2</h2>
-            <canvas id="chart2">
-            </canvas>
-            <p>Oe oe oe du texte du texte du texte</p>
+            <h2 class="title is-2 mt-6" id="dataviz1">Dataviz 1</h2>
+            <div class="container" id="dataviz">
+                <canvas id="chart">
+                </canvas>
+                <p>Oe oe oe du texte du texte du texte</p>
+            </div>
+            <h2 class="title is-2 mt-6" id="dataviz2">Répartition des énergies
+                dans la consommation énergétique mondiale</h2>
+            <div class="container" id="dataviz">
+                <canvas id="chart2">
+                </canvas>
+                <p>Oe oe oe du texte du texte du texte. "At vero eos et accusamus et iusto 
+                    odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti 
+                    atque corrupti quos dolores et quas molestias excepturi sint occaecati 
+                    cupiditate non provident, similique sunt in culpa qui officia deserunt 
+                    mollitia animi, id est laborum et dolorum fuga. 
+                    Itaque earum rerum hic tenetur a sapiente delectus asperiores repellat."
+                </p>
+            </div>
         </main>
         <footer class="footer">
             <div class="content has-text-centered">
