--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@ let ctx3 = document.getElementById('chart3');
                 label: 'data3', 
                 data:data3, 
                 fill:true, 
-                pointRadius:0 
+                pointRadius:0,
+                backgroundColor:none
                 }] 
                 } 
                 });
