--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <body>
         <header>
-            <nav class="navbar has-background-light">
+            <nav class="navbar has-background-light p-3">
                 <div class="navbar-brand">
                     <span class="icon">
                         <i class></i>
@@ -82,16 +82,14 @@
             <div class="container" id="dataviz">
                 <canvas id="chart2">
                 </canvas>
-                <p class="text is-5">Peut être ici expliquer tout ce qui est calculs/moyennes/etc et citer les sources. "At vero eos et accusamus et iusto 
-                    odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti 
-                    atque corrupti quos dolores et quas molestias excepturi sint occaecati 
-                    cupiditate non provident, similique sunt in culpa qui officia deserunt 
-                    mollitia animi, id est laborum et dolorum fuga. 
-                    Itaque earum rerum hic tenetur a sapiente delectus asperiores repellat."
-                </p>
-                <canvas id="chart3">
-                </canvas>
             </div>
+            <p class="text is-5">Peut être ici expliquer tout ce qui est calculs/moyennes/etc et citer les sources. "At vero eos et accusamus et iusto 
+                odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti 
+                atque corrupti quos dolores et quas molestias excepturi sint occaecati 
+                cupiditate non provident, similique sunt in culpa qui officia deserunt 
+                mollitia animi, id est laborum et dolorum fuga. 
+                Itaque earum rerum hic tenetur a sapiente delectus asperiores repellat."
+            </p>
         </main>
         <footer class="footer">
             <div class="content has-text-centered">
@@ -121,20 +119,21 @@
     backgroundColor: [
       'yellow',
       'green',
-      'non renouvelables'
+      'black'
     ],
     hoverOffset: 4
   }]
 } } );
 
 
+let data3= [[19, 19, 19, 19, 19, 19, 19, 19, 19, 19,
+  19, 19, 20, 20, 22, 19, 19, 19, 18, 19,
+  20, 20, 22, 23, 24, 20, 26, 20, 20, 29,
+  21, 21, 22, 20, 21, 25, 20, 27, 28, 29,
+  20, 20, 20, 23]]
 let labels3 = [1980, 1981, 1982, 1983, 1984, 1985, 1986, 1987, 1988, 1989, 1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019, 2020, 2021, 2022, 2023]
-let data3= [[1980, 1981, 1982, 1983, 1984, 1985, 1986, 1987, 1988, 1989,
-  1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999,
-  2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009,
-  2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019,
-  2020, 2021, 2022, 2023]]
-let ctx3 = document.getElementById('chart3');
+
+let ctx3 = document.getElementById('chart');
     new Chart(ctx3, { 
         type: 'line', 
         data: { 
