--- a/index.html
+++ b/index.html
@@ -83,12 +83,18 @@
                 <canvas id="chart2">
                 </canvas>
             </div>
-            <p class="text is-5">Peut être ici expliquer tout ce qui est calculs/moyennes/etc et citer les sources. "At vero eos et accusamus et iusto 
-                odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti 
-                atque corrupti quos dolores et quas molestias excepturi sint occaecati 
-                cupiditate non provident, similique sunt in culpa qui officia deserunt 
-                mollitia animi, id est laborum et dolorum fuga. 
-                Itaque earum rerum hic tenetur a sapiente delectus asperiores repellat."
+            <p class="text is-5">Peut être ici expliquer tout ce qui est
+                calculs/moyennes/etc et citer les sources. "At vero eos et
+                accusamus et iusto
+                odio dignissimos ducimus qui blanditiis praesentium voluptatum
+                deleniti
+                atque corrupti quos dolores et quas molestias excepturi sint
+                occaecati
+                cupiditate non provident, similique sunt in culpa qui officia
+                deserunt
+                mollitia animi, id est laborum et dolorum fuga.
+                Itaque earum rerum hic tenetur a sapiente delectus asperiores
+                repellat."
             </p>
         </main>
         <footer class="footer">
@@ -101,8 +107,29 @@
     </body>
 
     <script>
-    let data = [2,3,5]; 
-    let labels = ["Énergie nucléaire","Énergies renouvelables","Énergies non renouvelables"];
+
+let data= [[19, 19, 19, 19, 19, 19, 19, 19, 19, 19,
+  19, 19, 20, 20, 22, 19, 19, 19, 18, 19,
+  20, 20, 22, 23, 24, 20, 26, 20, 20, 29,
+  21, 21, 22, 20, 21, 25, 20, 27, 28, 29,
+  20, 20, 20, 23]]
+let labels = [1980, 1981, 1982, 1983, 1984, 1985, 1986, 1987, 1988, 1989, 1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019, 2020, 2021, 2022, 2023]
+
+let ctx = document.getElementById('chart');
+    new Chart(ctx, { 
+        type: 'line', 
+        data: { 
+            labels:labels, 
+            datasets:
+            [{ 
+                label: 'data', 
+                data:data, 
+                fill:true, 
+                pointRadius:0,
+                backgroundColor:none
+                }] 
+                } 
+                });
 
     let ctx2 = document.getElementById('chart2');
     new Chart(ctx2, { 
@@ -125,29 +152,6 @@
   }]
 } } );
 
-
-let data3= [[19, 19, 19, 19, 19, 19, 19, 19, 19, 19,
-  19, 19, 20, 20, 22, 19, 19, 19, 18, 19,
-  20, 20, 22, 23, 24, 20, 26, 20, 20, 29,
-  21, 21, 22, 20, 21, 25, 20, 27, 28, 29,
-  20, 20, 20, 23]]
-let labels3 = [1980, 1981, 1982, 1983, 1984, 1985, 1986, 1987, 1988, 1989, 1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019, 2020, 2021, 2022, 2023]
-
-let ctx3 = document.getElementById('chart');
-    new Chart(ctx3, { 
-        type: 'line', 
-        data: { 
-            labels:labels3, 
-            datasets:
-            [{ 
-                label: 'data3', 
-                data:data3, 
-                fill:true, 
-                pointRadius:0,
-                backgroundColor:none
-                }] 
-                } 
-                });
 </script>
 
 </html>
