--- a/index.html
+++ b/index.html
@@ -106,51 +106,78 @@
         </footer>
     </body>
 
-    <script>
+    <script src="script.js">
 
-let data= [[19, 19, 19, 19, 19, 19, 19, 19, 19, 19,
-  19, 19, 20, 20, 22, 19, 19, 19, 18, 19,
-  20, 20, 22, 23, 24, 20, 26, 20, 20, 29,
-  21, 21, 22, 20, 21, 25, 20, 27, 28, 29,
-  20, 20, 20, 23]]
-let labels = [1980, 1981, 1982, 1983, 1984, 1985, 1986, 1987, 1988, 1989, 1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019, 2020, 2021, 2022, 2023]
 
 let ctx = document.getElementById('chart');
-    new Chart(ctx, { 
-        type: 'line', 
-        data: { 
-            labels:labels, 
-            datasets:
-            [{ 
-                label: 'data', 
-                data:data, 
-                fill:true, 
-                pointRadius:0,
-                backgroundColor:none
-                }] 
-                } 
-                });
 
-    let ctx2 = document.getElementById('chart2');
-    new Chart(ctx2, { 
-    type: 'pie', 
-    data: { 
-  labels: [
-    'Énergie nucléaire',
-    'Énergies renouvelables',
-    'Énergies non renouvelables'
-  ],
-  datasets: [{
-    label: 'Part dans la consommation énergétique mondiale',
-    data: [2, 3, 5],
-    backgroundColor: [
-      'yellow',
-      'green',
-      'black'
-    ],
-    hoverOffset: 4
-  }]
-} } );
+newChart(ctx, {
+    type:'line', 
+    data:{ 
+        labels: years, 
+        datasets:[{ 
+            label:"Énergie nucléaire", 
+            data:nuclearEnergyTWh, 
+                 fill:true, 
+                 pointRadius:0,
+                 backgroundColor:none  
+        }, 
+        { 
+            label:"Énergies renouvelables", 
+            data:renewableEnergyTWh,
+                 fill:true, 
+                 pointRadius:0,
+                 backgroundColor:none 
+        }, 
+        { 
+            label:"Énergies non renouvelables", 
+            data: fossilFuelTWh,
+                 fill:true, 
+                 pointRadius:0,
+                 backgroundColor:none 
+        }] 
+    } 
+});
+
+
+//     new Chart(ctx, { 
+//         type: 'line', 
+//         data: { 
+//             labels:labels, 
+//             datasets:
+//             [{ 
+//                 label: 'data', 
+//                 data:data, 
+//                 fill:true, 
+//                 pointRadius:0,
+//                 backgroundColor:none
+//                 }] 
+//                 } 
+//                 });
+
+//     let data2 = [2,3,5]; 
+//     let labels2 = ["Énergie nucléaire","Énergies renouvelables","Énergies non renouvelables"];
+
+//     let ctx2 = document.getElementById('chart2');
+//     new Chart(ctx2, { 
+//     type: 'pie', 
+//     data: { 
+//   labels: [
+//     'Énergie nucléaire',
+//     'Énergies renouvelables',
+//     'Énergies non renouvelables'
+//   ],
+//   datasets: [{
+//     label: 'Part dans la consommation énergétique mondiale',
+//     data: [2, 3, 5],
+//     backgroundColor: [
+//       'yellow',
+//       'green',
+//       'black'
+//     ],
+//     hoverOffset: 4
+//   }]
+// } } );
 
 </script>
 
