--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     let ctx1 = document.getElementById('chart1');
     let ctx2 = document.getElementById('chart2');
 
-    new Chart1(ctx1, {
+    new Chart(ctx1, {
         type: 'line',
         data: {
             labels: years,
@@ -203,7 +203,7 @@
         }
     });
 
-    new Chart2(ctx,{
+    new Chart(ctx2,{
             type: "polarArea",
             data: chartData,
             options: {
