--- a/index.html
+++ b/index.html
@@ -130,7 +130,29 @@
             <div class="container" id="dataviz">
                 <canvas id="chart1">
                 </canvas>
-                <p is-5 mt-3>Oe oe oe du texte du texte du texte</p>
+                <p is-5 mt-3>Production d'énergie mesurée en terawatts-heures</p> 
+                <p>Sources : 
+                    <ul>
+                        <li>
+                            <a href="https://ourworldindata.org/grapher/nuclear-energy-generation?tab=chart&country=~OWID_WRL">Nuclear power generation - Our World in Data</a>
+                        </li>
+                        <li>
+                            <a href="https://ourworldindata.org/grapher/modern-renewable-energy-consumption">Renewable electricity generation - Our World in Data </a>
+                        </li>
+                        <li>
+                            <a href="https://ourworldindata.org/grapher/modern-renewable-prod">Modern renewable energy generation by source - Our World in Data</a>
+                        </li>
+                        <li>
+                            <a href="https://ourworldindata.org/grapher/elec-fossil-nuclear-renewables">Electricity production from fossil fuels, nuclear and renewables - Our World in Data</a>
+                        </li>
+                        <li>
+                            <a href="https://ourworldindata.org/grapher/electricity-prod-source-stacked">Electricity production by source, World </a>
+                        </li>
+                        <li>
+                            <a href="https://visualizingenergy.org/world-electricity-generation-since-1900/">World electricity generation since 1900 - Visualizing Energy</a>
+                        </li>    
+                    </ul>
+                </p>
             </div>
             <h2 class="title is-2 mt-6" id="dataviz2">Répartition des énergies
                 dans la consommation énergétique mondiale</h2>
@@ -221,19 +243,9 @@
 
     let labels2 = ["1", "2", "3", "4", "5", "6", "7", "8"]
 
-    const DATASETS = [[deathRate], [greenhouseGasEmission]]
-
     console.log(nuclearEnergyTWh)
     let ctx1 = document.getElementById('chart1');
     let ctx2 = document.getElementById('chart2');
-
-    //La fonction permettant de changer de dataset
-    function handleDataChange(chart, datasetIndex){ 
-        chart.data.datasets[0].data = DATASETS[datasetIndex]; 
-        chart.update(); }
-
-        const datasetSel = document.getElementById("data-select"); 
-        datasetSel.onchange = () => {handleDataChange(chart, datasetSel.value)};
 
     new Chart(ctx1, {
         type: 'line',
