--- a/index.html
+++ b/index.html
@@ -157,20 +157,10 @@
         <div class="container" id="dataviz">
             <canvas id="chart2">
             </canvas>
+            <p class="text is-5 mt-3">
+                Émissions de gaz à effet de serre mesurées en tonnes de CO2
+            </p>
         </div>
-        <p class="text is-5 mt-3">Peut être ici expliquer tout ce qui est
-            calculs/moyennes/etc et citer les sources. "At vero eos et
-            accusamus et iusto
-            odio dignissimos ducimus qui blanditiis praesentium voluptatum
-            deleniti
-            atque corrupti quos dolores et quas molestias excepturi sint
-            occaecati
-            cupiditate non provident, similique sunt in culpa qui officia
-            deserunt
-            mollitia animi, id est laborum et dolorum fuga.
-            Itaque earum rerum hic tenetur a sapiente delectus asperiores
-            repellat."
-        </p>
     </main>
     <footer class="footer">
         <div class="content has-text-centered">
