--- a/index.html
+++ b/index.html
@@ -31,23 +31,7 @@
         </nav>
     </header>
     <main class="m-6">
-        <div class="columns is-8">
-            <div class="column">
-                <h1 class="title is-1">Le Titre Lorem Ipsum Dolor Sit
-                    Amet</h1>
-                <p class="is-size-5">À l’heure de la transition énergétique,
-                    le renouvelable semble être la solution pour s’émanciper
-                    des énergies fossiles. Mais qu’en est-il du nucléaire ?
-                    Souvent critiqué, c’est pourtant une énergie qui émet
-                    peu de GES, et permet une production qui est pilotable,
-                    contrairement aux énergies renouvelables, soumises aux
-                    éléments pour en produire.</p>
-            </div>
-            <div class="column">
-                <img src="img/test.png" class="image" alt>
-            </div>
-        </div>
-        <div class="columns is-8">
+        <div class="columns is-2">
             <div class="column">
                 <h1 class="title is-1">Production d'énergie nucléaire</h1>
                 <p class="is-size-5">À l’heure de la transition énergétique,
@@ -62,32 +46,16 @@
                 <img src="img/iStock-2095181304.jpg" class="image" alt>
             </div>
         </div>
-        <div class="columns" id="text">
-            <div class="column">
-                <p class="is-size-5">
-                    Alors que le monde tente de faire évoluer ses systèmes énergétiques en abandonnant les combustibles
-                    fossiles au profit de sources d’énergie à faible émission de carbone, nous disposons d’un éventail
-                    d’options énergétiques : les technologies d’énergies renouvelables telles que l’hydroélectricité,
-                    l’éolien et le solaire, ainsi que l’énergie nucléaire.
-                    <br><br>L’énergie nucléaire et les technologies renouvelables émettent généralement très peu de CO2
-                    par unité de production d’énergie et sont également bien plus efficaces que les combustibles
-                    fossiles pour limiter la pollution atmosphérique locale.
-                </p>
-            </div>
-            <div class="column">
-                <p class="is-size-5">
-                    Cependant, alors que certains pays investissent massivement pour accroître leur approvisionnement en
-                    énergie nucléaire, d'autres ferment leurs centrales. Le rôle de l'énergie nucléaire dans le système
-                    énergétique est donc très spécifique à chaque pays.
-                    <br><br>
-                    Quelle part de notre énergie provient de l'énergie nucléaire ? Comment son rôle évolue-t-il au fil
-                    du temps ? Dans cet article, nous examinons les niveaux et l'évolution de la production d'énergie
-                    nucléaire dans le monde, ainsi que son bilan en matière de sécurité par rapport aux autres sources
-                    d'énergie.
-                </p>
-            </div>
+        <div class="columns is-1">
+            <p class="is-size-5">
+                Alors que le monde tente de faire évoluer ses systèmes énergétiques en abandonnant les combustibles fossiles au profit de sources d’énergie à faible émission de carbone, nous disposons d’un éventail d’options énergétiques : les technologies d’énergies renouvelables telles que l’hydroélectricité, l’éolien et le solaire, ainsi que l’énergie nucléaire. L’énergie nucléaire et les technologies renouvelables émettent généralement très peu de CO2 par unité de production d’énergie et sont également bien plus efficaces que les combustibles fossiles pour limiter la pollution atmosphérique locale.
+                <br><br>
+                Cependant, alors que certains pays investissent massivement pour accroître leur approvisionnement en énergie nucléaire, d'autres ferment leurs centrales. Le rôle de l'énergie nucléaire dans le système énergétique est donc très spécifique à chaque pays.
+                <br><br>
+                Quelle part de notre énergie provient de l'énergie nucléaire ? Comment son rôle évolue-t-il au fil du temps ? Dans cet article, nous examinons les niveaux et l'évolution de la production d'énergie nucléaire dans le monde, ainsi que son bilan en matière de sécurité par rapport aux autres sources d'énergie.
+            </p>
         </div>
-        <div class="columns">
+        <div class="columns is-2">
             <div class="column">
                 <img src="img/iStock-1481622983.jpg" class="image" alt>
             </div>
@@ -112,8 +80,8 @@
                 </p>
             </div>
         </div>
-        <h2 class="title is-2 mt-6" id="dataviz1">Production d'élécrticité par sources d'énergies, de 1965 à 2023</h2>
-        <div class="container" id="dataviz">
+        <h2 class="title is-2 mt-6">Production d'éléctricité par sources d'énergies, de 1965 à 2023</h2>
+        <div class="container" id="dataviz1">
             <canvas id="chart1">
             </canvas>
             <p is-5 mt-3>Production d'énergie mesurée en terawatts-heures</p>
@@ -146,8 +114,8 @@
             </ul>
             </p>
         </div>
-        <h2 class="title is-2 mt-6" id="dataviz2">Les sources d'énergies les plus sûres et les plus propres</h2>
-        <div class="container" id="dataviz">
+        <h2 class="title is-2 mt-6">Les sources d'énergies les plus sûres et les plus propres</h2>
+        <div class="container" id="dataviz2">
             <canvas id="chart2">
             </canvas>
         </div>
@@ -277,14 +245,14 @@
             'Nucléaire',
             'Solaire'
         ],
-        // datasets: [{
-        //     label: 'Nombre de morts',
-        //     data: dataset1
-        // }]
         datasets: [{
-            label: 'Emission de gaz à effet de serre',
-            data: dataset2
+            label: 'Nombre de morts',
+            data: dataset1
         }]
+        // datasets: [{
+        //     label: 'Emission de gaz à effet de serre',
+        //     data: dataset2
+        // }]
     };
 
     // Seconde dataviz ----------------------------------------------------------------
@@ -295,11 +263,11 @@
         type: "polarArea",
         data: chartData,
         options: {
-            elements: {
-                arc: {
-                    angle: [129.96, 10.76, 83.12, 8.57, 54.79, 23.80, 35.46, 13.64]
-                }
-            },
+            // elements: {
+            //     arc: {
+            //         angle: [129.96, 10.76, 83.12, 8.57, 54.79, 23.80, 35.46, 13.64]
+            //     }
+            // },
             scales: {
                 r: {
                     ticks: {
