--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 </span>
             </div>
             <div class="navbar-end">
-                <a href="#text" class="button is-light">Contenu</a>
-                <a href="#dataviz1" class="button is-light">Dataviz 1</a>
-                <a href="#dataviz2" class="button is-light">Dataviz 2</a>
+                <a href="#text" class="button is-light">Énergie nucléaire</a>
+                <a href="#dataviz1" class="button is-light">Production d'électricité</a>
+                <a href="#dataviz2" class="button is-light">Sûreté et propreté</a>
                 <a href="#poster" class="button is-light">Poster Datalogy</a>
             </div>
         </nav>
@@ -49,7 +49,7 @@
         </div>
         <div class="columns is-8">
             <div class="column">
-                <h1 class="title is-1">Production d'énergie nucléaire</h1>
+                <h1 class="title is-1" id="text">Production d'énergie nucléaire</h1>
                 <p class="is-size-5">À l’heure de la transition énergétique,
                     le renouvelable semble être la solution pour s’émanciper
                     des énergies fossiles. Mais qu’en est-il du nucléaire ?
@@ -62,7 +62,7 @@
                 <img src="img/iStock-2095181304.jpg" class="image" alt>
             </div>
         </div>
-        <div class="columns" id="text">
+        <div class="columns">
             <div class="column">
                 <p class="is-size-5">
                     Alors que le monde tente de faire évoluer ses systèmes énergétiques en abandonnant les combustibles
@@ -112,7 +112,7 @@
                 </p>
             </div>
         </div>
-        <h2 class="title is-2 mt-6" id="dataviz1">Production d'élécrticité par sources d'énergies, de 1965 à 2023</h2>
+        <h2 class="title is-2 mt-6" id="dataviz1">Production d'électricité par sources d'énergies, de 1965 à 2023</h2>
         <div class="container" id="dataviz">
             <canvas id="chart1">
             </canvas>
