--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </nav>
         </header>
         <main class="m-6">
-            <div class="columns is-2">
+            <div class="columns is-2 mt-6">
                 <div class="column">
                     <h1 class="title is-1" id="text">Production d'énergie
                         nucléaire</h1>
@@ -53,7 +53,7 @@
                     <img src="img/iStock-2095181304.jpg" class="image" alt>
                 </div>
             </div>
-            <div class="columns is-1">
+            <div class="columns is-1 mt-6">
                 <p class="is-size-5">
                     Alors que le monde tente de faire évoluer ses systèmes
                     énergétiques en abandonnant les combustibles fossiles au
@@ -81,7 +81,7 @@
                     d'énergie.
                 </p>
             </div>
-            <div class="columns is-2">
+            <div class="columns is-2 mt-6">
                 <div class="column">
                     <img src="img/iStock-1481622983.jpg" class="image" alt>
                 </div>
@@ -116,8 +116,7 @@
                     </p>
                 </div>
             </div>
-            <h2 class="title is-2 mt-6">Production d'éléctricité par sources
-                d'énergies, de 1965 à 2023</h2>
+            <h2 class="title is-2 mt-6">Production d'éléctricité par sources d'énergies, de 1965 à 2023</h2>
             <div class="container" id="dataviz1">
                 <canvas id="chart1">
                 </canvas>
@@ -163,8 +162,7 @@
                     </ul>
                 </p>
             </div>
-            <h2 class="title is-2 mt-6">Les sources d'énergies les plus sûres et
-                les plus propres</h2>
+            <h2 class="title is-2 mt-6">Les sources d'énergies les plus sûres et les plus propres</h2>
             <div class="container" id="dataviz2">
                 <canvas id="chart2">
                 </canvas>
