bulmatage du txt

--- a/index.html
+++ b/index.html
@@ -116,24 +116,24 @@
                     </p>
                 </div>
             </div>
-            <h2 class="title is-2 mt-6">Production d'éléctricité par sources
+            <h2 class="title is-2 mt-6">Production d'électricité par sources
                 d'énergies, de 1965 à 2023</h2>
             <div class="container" id="dataviz1">
                 <canvas id="chart1">
                 </canvas>
-                <p class="is-size-5 mt-3">* Production d'énergie mesurée en
+                <p class="mt-2 mb-2">* Production d'énergie mesurée en
                     terawatts-heures</p>
-                <p class="is-size-5">
+                <p class="is-size-5 mt-2 mb-2">
                     On constate en observant ce premier graphique que la
                     production d’électricité à partir d’énergies fossiles et
                     renouvelables n’a cessé d’augmenter au fil des années,
                     tandis que la production d’électricité issue de l’énergie
                     nucléaire stagne depuis maintenant plus de trente ans.
                 </p>
-                <p class="is-size-5">
+                <p class="is-size-5 mt-2 mb-5">
                     On peut se demander si cette utilisation toujours plus
                     conséquente d’énergie fossile comparée au nucléaire est
-                    justifiable d’un point de vue écologique et de sûreté. Le
+                    justifiable d’un point de vue écologique et en terme de sûreté. Le
                     graphique suivant aura ainsi pour objectif d’éclaircir cette
                     question, en mettant en avant la sûreté et la propreté des
                     différentes énergies .
@@ -184,7 +184,7 @@
                 <canvas id="chart2">
                 </canvas>
                 <p class="is-size-5 m-3">
-                    Émissions de gaz à effet de serre mesurées en tonnes de CO2
+                    * Émissions de gaz à effet de serre mesurées en tonnes de CO2
                 </p>
             </div>
         </main>
