--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     conséquente d’énergie fossile comparée au nucléaire est
                     justifiable d’un point de vue écologique et en terme de sûreté. Le
                     graphique suivant aura ainsi pour objectif d’éclaircir cette
-                    question, en mettant en avant la sûreté et la propreté des
+                    question, en analysant la sûreté et la propreté des
                     différentes énergies .
                 </p>
                 <p>Sources :
