--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <div class="container" id="dataviz2">
                 <canvas id="chart2">
                 </canvas>
-                <p class="is-size-5 m-3">
+                <p class="mt-2 mb-2">
                     * Émissions de gaz à effet de serre mesurées en tonnes de CO2
                 </p>
             </div>
