--- a/index.html
+++ b/index.html
@@ -143,10 +143,8 @@
                         <li>
                             <a
                                 href="https://ourworldindata.org/grapher/nuclear-energy-generation?tab=chart&country=~OWID_WRL">Nuclear
-                                power generation - Our World in Data</a>
-                        </li>
-                        <li>
-                            <a
+                                power generation - Our World in Data</a> •
+                                <a
                                 href="https://ourworldindata.org/grapher/modern-renewable-energy-consumption">Renewable
                                 electricity generation - Our World in Data </a>
                         </li>
@@ -154,10 +152,8 @@
                             <a
                                 href="https://ourworldindata.org/grapher/modern-renewable-prod">Modern
                                 renewable energy
-                                generation by source - Our World in Data</a>
-                        </li>
-                        <li>
-                            <a
+                                generation by source - Our World in Data</a> •
+                                <a
                                 href="https://ourworldindata.org/grapher/elec-fossil-nuclear-renewables">Electricity
                                 production
                                 from fossil fuels, nuclear and renewables - Our
@@ -167,10 +163,8 @@
                             <a
                                 href="https://ourworldindata.org/grapher/electricity-prod-source-stacked">Electricity
                                 production
-                                by source, World </a>
-                        </li>
-                        <li>
-                            <a
+                                by source, World </a> •
+                                <a
                                 href="https://visualizingenergy.org/world-electricity-generation-since-1900/">World
                                 electricity
                                 generation since 1900 - Visualizing Energy</a>
